# wagtail-oauth2

./: .coveragerc  .editorconfig  .gitignore  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTORS.txt  Justfile  LICENSE  README.rst  manage.py  pyproject.toml  pytest.ini
.github/workflows/: main.yml  publish-doc.yml  publish-pypi.yml  release.yml  tests-artifacts.yml  tests.yml
docs/: requirements.txt  requirements_extra.txt
docs/source/: conf.py  index.rst
docs/source/users/: index.rst  installation.rst  oauth2_settings.rst
scripts/: get_version.py  write_changelog.py
src/wagtail_oauth2/: __init__.py  resources.py  settings.py  urls.py  utils.py  views.py
src/wagtail_oauth2/templates/: login_error.html
src/wagtail_oauth2/tests/: apps.py  conftest.py  settings.py  test_resources.py  test_utils.py  test_views.py  urls.py
tests/: apps.py  conftest.py  settings.py  test_resources.py  test_utils.py  test_views.py  urls.py
