[project]
name = "wagtail-oauth2"
version = "1.0.0"
description = "OAuth2.0 authentication fo wagtail"
readme = "README.rst"
authors = [
    {name = "Guillaume Gauvrit", email = "guillaume@gandi.net"},
]
license = {text = "BSD-Derived"}
requires-python = ">=3.7,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "Django >=3.2.0,<5",
    "wagtail >=2.14,<4.0",
    "requests >=2.26.0,<3",
]

[project.urls]
homepage = "https://wagtail-oauth2.readthedocs.io/en/latest/"
repository = "https://github.com/Gandi/wagtail-oauth2"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88


[dependency-groups]
dev = [
    "black >=21.11b1,<22.0",
    "isort >=5.10.1,<6.0.0",
    "pytest-django >=4.4.0,<5.0.0",
    "xmlrunner >=1.7.7,<2.0.0",
    "pytest-cov >=3.0.0,<4.0.0",
    "Faker >=10.0.0,<11.0.0",
    "Sphinx >=4.3.1,<5.0.0",
    "sphinx-rtd-theme >=1.0.0,<2.0.0",
    "tomlkit >=0.7.2,<1.0.0",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
