[project]
name = "wagtail-oauth2"
version = "1.0.0"
description = "OAuth2.0 authentication fo wagtail"
readme = "README.rst"
authors = [
    {name = "Guillaume Gauvrit", email = "guillaume@gandi.net"},
]
license = {text = "BSD-Derived"}
requires-python = ">=3.7,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "Django >=3.2.0,<5",
    "wagtail >=4.0,<8",
    "requests >=2.26.0,<3",
]

[project.urls]
homepage = "https://wagtail-oauth2.readthedocs.io/en/latest/"
repository = "https://github.com/Gandi/wagtail-oauth2"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # bug bear security warning
    "I",   # isort import order
    "F",   # pyflakes
    "UP",  # alter when better syntax is available
    "RUF", # the ruff developper's own rules
]
ignore = ["RUF022"]


[dependency-groups]
dev = [
    "Faker >=10.0.0,<11.0.0",
    "pytest-cov >=3.0.0,<4.0.0",
    "pytest-django >=4.4.0,<5.0.0",
    "ruff >=0.14.13,<1",
    "sphinx >=4.3.1,<5.0.0",
    "sphinx-rtd-theme >=1.0.0,<2.0.0",
    "tomlkit >=0.7.2,<1.0.0",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
