[project]
name = "wagtail-oauth2"
version = "2.0.3"
description = "OAuth2.0 authentication fo wagtail"
readme = "README.rst"
authors = [
    {name = "Guillaume Gauvrit", email = "guillaume@gandi.net"},
]
license = {text = "BSD-Derived"}
requires-python = ">=3.7,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 2",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "Django >=3.2.0,<5",
    "wagtail >=4.0,<8",
    "requests >=2.26.0,<3",
]

[project.urls]
homepage = "https://wagtail-oauth2.readthedocs.io/en/latest/"
repository = "https://github.com/Gandi/wagtail-oauth2"

[project.optional-dependencies]
docs = [
    "sphinx >=9.0.0; python_version >= '3.12'",
    "furo >=2025.12.19; python_version >= '3.12'",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # bug bear security warning
    "I",   # isort import order
    "F",   # pyflakes
    "UP",  # alter when better syntax is available
    "RUF", # the ruff developper's own rules
]
ignore = ["RUF022"]


[dependency-groups]
dev = [
    "Faker >=10.0.0,<11.0.0",
    "html5lib>=1.1",
    "pytest-cov >=3.0.0,<4.0.0",
    "pytest-django >=4.4.0,<5.0.0",
    "ruff >=0.14.13,<1",
]
doc = [
    "sphinx >=9.0.0; python_version >= '3.12'",
    "furo >=2025.12.19; python_version >= '3.12'",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = "test_*.py"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
